--- a/html and css/index.html
+++ b/html and css/index.html
@@ -13,6 +13,25 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<p class="small-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Neque cumque aspernatur officiis praesentium quam. Incidunt tempora autem, non, recusandae cum porro eos sit iusto, iure exercitationem quidem sapiente impedit unde!</p>
+<header class="site-header">
+  <div class="container site-header__container">
+    <a href="" class="site-header__logo">
+      <img src="img/bookmark-logo.svg" alt="site logo" class="site-header__logo-img" width="150" height="25">
+    </a>
+
+      <nav class="sitenav site-header__sitenav">
+        <ul class="sitenav__list">
+          <li class="sitenav__item"><a class="sitenav__link" href="#" >FEATURES</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#" >PRICING</a></li>
+          <li class="sitenav__item"><a class="sitenav__link" href="#" >CONTACT</a></li>
+        </ul>
+      </nav>
+
+      <a href="#" class="button button-site-header">Login</a>
+
+
+  </div>
+</header>
+
 </body>
 </html>
