Add hero section

--- a/html and css/index.html
+++ b/html and css/index.html
@@ -13,11 +13,11 @@
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
-<header class="site-header">
-  <div class="container site-header__container">
-    <a href="" class="site-header__logo">
-      <img src="img/bookmark-logo.svg" alt="site logo" class="site-header__logo-img" width="150" height="25">
-    </a>
+  <header class="site-header">
+    <div class="container site-header__container">
+      <a href="" class="site-header__logo">
+        <img src="img/bookmark-logo.svg" alt="site logo" class="site-header__logo-img" width="150" height="25">
+      </a>
 
       <nav class="sitenav site-header__sitenav">
         <ul class="sitenav__list">
@@ -29,9 +29,26 @@
 
       <a href="#" class="button button-site-header">Login</a>
 
+    </div>
+  </header>
 
-  </div>
-</header>
+  <main class="main-content">
+    <!-- hero -->
+    <div class="hero">
+      <div class="container hero__conatiner">
+        <div class="hero-content">
+          <h1 class="hero__title">A Simple Bookmark Manager</h1>
+          <p class="hero__text">A clean and simple interface to organize your favourite websites. Open a new browser tab and see your sites load instantly. Try it for free.</p>
+          <div class="hero__button-wrapper">
+            <a href="#" class="hero-button button button-blue">Get it on Chrome</a>
+            <a href="#" class="hero-button button button-gray">Get it on Firefox</a>
+          </div>
+        </div>
+
+        <img class="hero-img" src="img/hero-img.svg" alt="tablet photo" width="578" height="385">
+      </div>
+    </div>
+  </main>
 
 </body>
 </html>
