--- a/html and css/index.html
+++ b/html and css/index.html
@@ -56,6 +56,22 @@
             Our aim is to make it quick and easy for you to access your favourite websites. Your bookmarks sync between your devices so you can access them on the go.
           </p>
         </div>
+
+
+        <!-- Tabs -->
+        <div class="tabs">
+          <Ul class="tabs-list">
+            <li class="tabs-item">
+              <a href="#" class="tabs-link">Simple Bookmarking</a>
+            </li>
+            <li class="tabs-item">
+              <a href="#" class="tabs-link">Speedy Searching</a>
+            </li>
+            <li class="tabs-item">
+              <a href="#" class="tabs-link">Easy Sharing</a>
+            </li>
+          </Ul>
+        </div>
       </div>
 
     </section>
@@ -65,20 +81,21 @@
           <h2 class="section__title">Download the extension</h2>
           <p class="section-text">
             We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize. </p>
+          </div>
         </div>
-      </div>
-    </section>
+      </section>
 
-    <section class="section">
-      <div class="container">
-        <div class="section-wrapper">
-          <h2 class="section__title">Frequently Asked Questions</h2>
-          <p class="section-text">
-            Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.          </p>
-        </div>
-      </div>
-    </section>
-  </main>
+      <section class="section">
+        <div class="container">
+          <div class="section-wrapper">
+            <h2 class="section__title">Frequently Asked Questions</h2>
+            <p class="section-text">
+              Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.          </p>
+            </div>
 
-</body>
-</html>
+          </div>
+        </section>
+      </main>
+
+    </body>
+    </html>
