--- a/html and css/index.html
+++ b/html and css/index.html
@@ -60,19 +60,64 @@
 
         <!-- Tabs -->
         <div class="tabs">
-          <Ul class="tabs-list">
-            <li class="tabs-item">
-              <a href="#" class="tabs-link">Simple Bookmarking</a>
+          <ul class="tabs-list">
+            <li class="tabs-item tabs-item--active js-tabs-item">
+              <a href="#simple-bookmark" data-tab-target="#simple-bookmark" class="tabs-link js-tabs-link">Simple Bookmarking</a>
             </li>
-            <li class="tabs-item">
-              <a href="#" class="tabs-link">Speedy Searching</a>
+            <li class="tabs-item js-tabs-item">
+              <a href="#speedy-searching" data-tab-target="#speedy-searching" class="tabs-link js-tabs-link">Speedy Searching</a>
             </li>
-            <li class="tabs-item">
-              <a href="#" class="tabs-link">Easy Sharing</a>
+            <li class="tabs-item js-tabs-item">
+              <a href="#easy-sharing" data-tab-target="#easy-sharing" class="tabs-link js-tabs-link">Easy Sharing</a>
             </li>
-          </Ul>
+          </ul>
         </div>
       </div>
+
+
+        <!-- tabs panels -->
+          <div class="tab__panels">
+              <div class="tab-panel tab-panel-avtive" id="simple-bookmark">
+                <div class="container">
+                  <section class="feature-tab-panel">
+                    <img src="img/simple-bookmark-img.svg" alt="bookmark manager illustration" class="feature-tab-panel__img feature-tab-panel__img-bookmark-manager" width="536" height="346">
+                    <div class="feature-tab-panel__info">
+                      <h3 class="feature-tab-panel__title">Bookmark in one click</h3>
+                      <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                      <a href="#" class="button button-blue">More info</a>
+                    </div>
+                  </section>
+                </div>
+              </div>
+
+            <div class="tab-panel" id="speedy-searching">
+              <div class="container">
+                <section class="feature-tab-panel">
+                  <img src="img/speedy-searching-img.svg" alt="bookmark search" class="feature-tab-panel__img feature-tab-panel__img-search" width="468" height="393">
+                  <div class="feature-tab-panel__info">
+                    <h3 class="feature-tab-panel__title">Intelligent search</h3>
+                    <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                    <a href="#" class="button button-blue">More info</a>
+                  </div>
+                </section>
+              </div>
+            </div>
+
+            <div class="tab-panel" id="easy-sharing">
+              <div class="container">
+                <section class="feature-tab-panel">
+                  <img src="img/easy-sharing-img.svg" alt="bookmark manager" class="feature-tab-panel__img feature-tab-panel__img-manager" width="440" height="380">
+                  <div class="feature-tab-panel__info">
+                    <h3 class="feature-tab-panel__title">Share your bookmarks</h3>
+                    <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+                    <a href="#" class="button button-blue">More info</a>
+                  </div>
+                </section>
+              </div>
+            </div>
+
+          </div>
+
 
     </section>
     <section class="section">
@@ -97,5 +142,6 @@
         </section>
       </main>
 
+        <script src="script.js"></script>
     </body>
     </html>
