Add faq section and accordion section.

--- a/html and css/index.html
+++ b/html and css/index.html
@@ -75,73 +75,157 @@
       </div>
 
 
-        <!-- tabs panels -->
-          <div class="tab__panels">
-              <div class="tab-panel tab-panel-avtive" id="simple-bookmark">
-                <div class="container">
-                  <section class="feature-tab-panel">
-                    <img src="img/simple-bookmark-img.svg" alt="bookmark manager illustration" class="feature-tab-panel__img feature-tab-panel__img-bookmark-manager" width="536" height="346">
-                    <div class="feature-tab-panel__info">
-                      <h3 class="feature-tab-panel__title">Bookmark in one click</h3>
-                      <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
-                      <a href="#" class="button button-blue">More info</a>
-                    </div>
-                  </section>
-                </div>
+      <!-- tabs panels -->
+      <div class="tab__panels">
+        <div class="tab-panel tab-panel-avtive" id="simple-bookmark">
+          <div class="container">
+            <section class="feature-tab-panel">
+              <img src="img/simple-bookmark-img.svg" alt="bookmark manager illustration" class="feature-tab-panel__img feature-tab-panel__img-bookmark-manager" width="536" height="346">
+              <div class="feature-tab-panel__info">
+                <h3 class="feature-tab-panel__title">Bookmark in one click</h3>
+                <p class="feature-tab-panel__text">Organize your bookmarks however you like. Our simple drag-and-drop interface gives you complete control over how you manage your favourite sites.</p>
+                <a href="#" class="button button-blue">More info</a>
               </div>
-
-            <div class="tab-panel" id="speedy-searching">
-              <div class="container">
-                <section class="feature-tab-panel">
-                  <img src="img/speedy-searching-img.svg" alt="bookmark search" class="feature-tab-panel__img feature-tab-panel__img-search" width="468" height="393">
-                  <div class="feature-tab-panel__info">
-                    <h3 class="feature-tab-panel__title">Intelligent search</h3>
-                    <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
-                    <a href="#" class="button button-blue">More info</a>
-                  </div>
-                </section>
-              </div>
-            </div>
-
-            <div class="tab-panel" id="easy-sharing">
-              <div class="container">
-                <section class="feature-tab-panel">
-                  <img src="img/easy-sharing-img.svg" alt="bookmark manager" class="feature-tab-panel__img feature-tab-panel__img-manager" width="440" height="380">
-                  <div class="feature-tab-panel__info">
-                    <h3 class="feature-tab-panel__title">Share your bookmarks</h3>
-                    <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
-                    <a href="#" class="button button-blue">More info</a>
-                  </div>
-                </section>
-              </div>
-            </div>
-
+            </section>
           </div>
+        </div>
+
+        <div class="tab-panel" id="speedy-searching">
+          <div class="container">
+            <section class="feature-tab-panel">
+              <img src="img/speedy-searching-img.svg" alt="bookmark search" class="feature-tab-panel__img feature-tab-panel__img-search" width="468" height="393">
+              <div class="feature-tab-panel__info">
+                <h3 class="feature-tab-panel__title">Intelligent search</h3>
+                <p class="feature-tab-panel__text">Our powerful search feature will help you find saved sites in no time at all. No need to trawl through all of your bookmarks.</p>
+                <a href="#" class="button button-blue">More info</a>
+              </div>
+            </section>
+          </div>
+        </div>
+
+        <div class="tab-panel" id="easy-sharing">
+          <div class="container">
+            <section class="feature-tab-panel">
+              <img src="img/easy-sharing-img.svg" alt="bookmark manager" class="feature-tab-panel__img feature-tab-panel__img-manager" width="440" height="380">
+              <div class="feature-tab-panel__info">
+                <h3 class="feature-tab-panel__title">Share your bookmarks</h3>
+                <p class="feature-tab-panel__text">Easily share your bookmarks and collections with others. Create a shareable link that you can send at the click of a button.</p>
+                <a href="#" class="button button-blue">More info</a>
+              </div>
+            </section>
+          </div>
+        </div>
+
+      </div>
 
 
     </section>
-    <section class="section">
+    <section class="extensions section">
       <div class="container">
         <div class="section-wrapper">
           <h2 class="section__title">Download the extension</h2>
           <p class="section-text">
             We’ve got more browsers in the pipeline. Please do let us know if you’ve got a favourite you’d like us to prioritize. </p>
           </div>
+
+          <div class="extensions__inner">
+            <ul class="extension__list">
+              <li class="extension__item extension">
+                <img src="img/chrome.svg" alt="" class="extension-img" width="102" height="100">
+                <h3 class="extension__title">Add to Chrome</h3>
+                <p class="extension__text">Minimum version 62</p>
+                <div class="extension__link-wrapper">
+                  <a target="_blank" href="#" class="button button-blue">Add & Install Extension</a>
+                </div>
+              </li>
+              <li class="extension__item extension">
+                <img src="img/firefox.svg" alt="" class="extension-img" width="105" height="100">
+                <h3 class="extension__title">Add to Firefox</h3>
+                <p class="extension__text">Minimum version 55</p>
+                <div class="extension__link-wrapper">
+                  <a target="_blank" href="#" class="button button-blue">Add & Install Extension</a>
+                </div>
+              </li>
+              <li class="extension__item extension">
+                <img src="img/combined-shape.svg" alt="" class="extension-img" width="102" height="100">
+                <h3 class="extension__title">Add to Opera</h3>
+                <p class="extension__text">Minimum version 46</p>
+                <div class="extension__link-wrapper">
+                  <a target="_blank" href="#" class="button button-blue">Add & Install Extension</a>
+                </div>
+              </li>
+            </ul>
+          </div>
         </div>
       </section>
 
-      <section class="section">
+      <section class="faq section">
         <div class="container">
           <div class="section-wrapper">
             <h2 class="section__title">Frequently Asked Questions</h2>
             <p class="section-text">
               Here are some of our FAQs. If you have any other questions you’d like answered please feel free to email us.          </p>
             </div>
+            <div class="faq__inner">
+              <div class="faq__accordion">
+                <div class="accordion">
+                  <!-- accordion item1 -->
+                  <section class="accordion__item">
+                    <header class="accordion__item-header">
+                      <h3 class="accordion__item-header-title">What is Bookmark?</h3>
+                      <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
+                      </button>
+                    </header>
+                    <div class="accordion__item-content">
+                      <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                        ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                      </div>
+                    </section>
+                    <!-- accordion item2 -->
+                    <section class="accordion__item">
+                      <header class="accordion__item-header">
+                        <h3 class="accordion__item-header-title">How can I request a new browser?</h3>
+                          <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
+                          </button>
+                        </header>
+                        <div class="accordion__item-content">
+                          <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                            ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                          </div>
+                        </section>
+                        <!-- accordion item3 -->
+                        <section class="accordion__item">
+                          <header class="accordion__item-header">
+                            <h3 class="accordion__item-header-title">Is there a mobile app?</h3>
+                            <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
+                            </button>
+                          </header>
+                          <div class="accordion__item-content">
+                            <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                              ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                            </div>
+                          </section>
 
-          </div>
-        </section>
-      </main>
+                          <!-- accordion item4 -->
+                          <section class="accordion__item">
+                            <header class="accordion__item-header">
+                              <h3 class="accordion__item-header-title">What about other Chromium browsers?</h3>
+                              <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
+                              </button>
+                            </header>
+                            <div class="accordion__item-content">
+                              <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                                ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                              </div>
+                            </section>
+                          </div>
+                        </div>
+                        <a href="#" class="button button-blue">More info</a>
+                      </div>
+                    </div>
+                  </section>
+                </main>
 
-        <script src="script.js"></script>
-    </body>
-    </html>
+                <script src="script.js"></script>
+              </body>
+              </html>
