Add subscription section.

--- a/html and css/index.html
+++ b/html and css/index.html
@@ -185,6 +185,18 @@
                     <section class="accordion__item">
                       <header class="accordion__item-header">
                         <h3 class="accordion__item-header-title">How can I request a new browser?</h3>
+                        <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
+                        </button>
+                      </header>
+                      <div class="accordion__item-content">
+                        <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+                          ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
+                        </div>
+                      </section>
+                      <!-- accordion item3 -->
+                      <section class="accordion__item">
+                        <header class="accordion__item-header">
+                          <h3 class="accordion__item-header-title">Is there a mobile app?</h3>
                           <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
                           </button>
                         </header>
@@ -193,10 +205,11 @@
                             ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
                           </div>
                         </section>
-                        <!-- accordion item3 -->
+
+                        <!-- accordion item4 -->
                         <section class="accordion__item">
                           <header class="accordion__item-header">
-                            <h3 class="accordion__item-header-title">Is there a mobile app?</h3>
+                            <h3 class="accordion__item-header-title">What about other Chromium browsers?</h3>
                             <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
                             </button>
                           </header>
@@ -205,27 +218,33 @@
                               ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
                             </div>
                           </section>
-
-                          <!-- accordion item4 -->
-                          <section class="accordion__item">
-                            <header class="accordion__item-header">
-                              <h3 class="accordion__item-header-title">What about other Chromium browsers?</h3>
-                              <button class="accordion__item-toggler" type="button" aria-label="Accordion-toggler"><img class="accordion__toggler-item-icon" src="img/accordion-down.svg" alt="down-arrow" width="20" height="13">
-                              </button>
-                            </header>
-                            <div class="accordion__item-content">
-                              <p class="accordion__item-text">Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
-                                ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
-                              </div>
-                            </section>
-                          </div>
                         </div>
-                        <a href="#" class="button button-blue">More info</a>
                       </div>
+                      <a href="#" class="button button-blue">More info</a>
                     </div>
-                  </section>
-                </main>
+                  </div>
+                </section>
 
-                <script src="script.js"></script>
-              </body>
-              </html>
+
+                <!-- subscription -->
+                <section class="subscription">
+                  <div class="sunscription-container container">
+                    <div class="subscription__wrapper">
+                      <p class="subscription__count-text">35,000+ alredy joined</p>
+                      <h2 class="subscription__heading">Stay up-to-date with what
+                        we’re doing</h2>
+                        <form class="subscription__form" action="#" method="post">
+                          <div class="subscription__field-wrapper">
+                            <input type="email" class="subscription__field" name="email" placeholder="Enter your email address"  aria-label="email" request>
+                            <div class="subscription__error">Whoops, make sure it’s an email</div>
+                          </div>
+                          <button class="button button-site-header" type="submit">Contact Us</button>
+                        </form>
+                    </div>
+                  </div>
+                </section>
+              </main>
+
+              <script src="script.js"></script>
+            </body>
+            </html>
