Add site footer

--- a/html and css/index.html
+++ b/html and css/index.html
@@ -240,11 +240,39 @@
                           </div>
                           <button class="button button-site-header" type="submit">Contact Us</button>
                         </form>
+                      </div>
                     </div>
-                  </div>
-                </section>
-              </main>
+                  </section>
+                </main>
 
-              <script src="script.js"></script>
-            </body>
-            </html>
+                <!-- site footer -->
+                <footer class="sitE-footer site-footer">
+                  <div class="site-footer__container container">
+                    <!-- site logo -->
+                    <a href="" class="site-footer__logo">
+                      <img src="img/site-white-logo.svg" alt="site logo" class="site-header__logo-img" width="150" height="25">
+                    </a>
+                    <!-- nav -->
+                    <div class="site-footer__sitenav sitenav-white">
+                      <ul class="sitenav__list">
+                        <li class="sitenav__item"><a class="sitenav__link sitenav__link-footer" href="#" >FEATURES</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link sitenav__link-footer" href="#" >PRICING</a></li>
+                        <li class="sitenav__item"><a class="sitenav__link sitenav__link-footer" href="#" >CONTACT</a></li>
+                      </ul>
+                    </div>
+
+                    <!-- socials -->
+                    <ul class="socials__list">
+                      <li class="socials__item">
+                        <img class="socials__link" aria-label="Facebook" src="img/facebook.svg" alt="facebook" width="24" height="24">
+                      </li>
+                      <li class="socials__item">
+                        <img class="socials__link" aria-label="Twitter" src="img/twitter.svg" alt="facebook" width="24" height="20">
+                      </li>
+                    </ul>
+                  </div>
+                </footer>
+
+                <script src="script.js"></script>
+              </body>
+              </html>
