--- a/html and css/index.html
+++ b/html and css/index.html
@@ -75,7 +75,7 @@
       </div>
 
 
-      <!-- tabs panels -->
+      <!-- Tabs panels -->
       <div class="tab__panels">
         <div class="tab-panel tab-panel-avtive" id="simple-bookmark">
           <div class="container">
