--- a/html and css/index.html
+++ b/html and css/index.html
@@ -33,7 +33,7 @@
   </header>
 
   <main class="main-content">
-    <!-- hero -->
+    <!-- Hero -->
     <div class="hero">
       <div class="container hero__conatiner">
         <div class="hero-content">
