--- a/html and css/index.html
+++ b/html and css/index.html
@@ -169,7 +169,7 @@
             <div class="faq__inner">
               <div class="faq__accordion">
                 <div class="accordion">
-                  <!-- accordion item1 -->
+                  <!-- Accordion item1 -->
                   <section class="accordion__item">
                     <header class="accordion__item-header">
                       <h3 class="accordion__item-header-title">What is Bookmark?</h3>
