--- a/html and css/index.html
+++ b/html and css/index.html
@@ -193,7 +193,7 @@
                           ultricies non ligula. Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.</p>
                         </div>
                       </section>
-                      <!-- accordion item3 -->
+                      <!-- Accordion item3 -->
                       <section class="accordion__item">
                         <header class="accordion__item-header">
                           <h3 class="accordion__item-header-title">Is there a mobile app?</h3>
