--- a/html and css/index.html
+++ b/html and css/index.html
@@ -261,7 +261,7 @@
                       </ul>
                     </div>
 
-                    <!-- socials -->
+                    <!-- Socials -->
                     <ul class="socials__list">
                       <li class="socials__item">
                         <img class="socials__link" aria-label="Facebook" src="img/facebook.svg" alt="facebook" width="24" height="24">
