--- a/html and css/index.html
+++ b/html and css/index.html
@@ -206,7 +206,7 @@
                           </div>
                         </section>
 
-                        <!-- accordion item4 -->
+                        <!-- Accordion item4 -->
                         <section class="accordion__item">
                           <header class="accordion__item-header">
                             <h3 class="accordion__item-header-title">What about other Chromium browsers?</h3>
