--- a/html and css/index.html
+++ b/html and css/index.html
@@ -226,7 +226,7 @@
                 </section>
 
 
-                <!-- subscription -->
+                <!-- Subscription -->
                 <section class="subscription">
                   <div class="sunscription-container container">
                     <div class="subscription__wrapper">
